calculator/assets/style.css
body {
  align-items: center;
  background-color: #000000;
  color: #00ffff;
  display: flex;
  flex-direction: column;
  height: 100vh;
  justify-content: space-between;
  margin: 0;
}

header {
  color: #00ffff;
  font: 4rem sans-serif;
  margin-top: 10px;
  text-wrap: nowrap;
}

#main {
  border: 5px solid #00ffff;
  color: #000000;
  display: flex;
  flex-direction: column;
  gap: 10px;
  height: 500px;
  padding: 10px;
  width: 400px;
}

#screenContainer {
  border: 2px solid #00ffff;
  display: flex;
  flex-direction: column;
  font-size: 5vh;
  height: 30%;
}

#screenContainer > * {
  background-color: #ffffff;
  direction: rtl;
  height: 50%;
  overflow-x: scroll;
}

::-webkit-scrollbar {
  background: #000000;
}

::-webkit-scrollbar-thumb,
::-webkit-scrollbar-button {
  background: #00ffff;
  border: 3px solid transparent;
  background-clip: content-box;
}

#buttonContainer {
  display: grid;
  gap: 10px;
  grid-template-rows: 1fr 4fr;
  height: 70%;
}

button {
  background-color: #202020;
  border-radius: 7.5%;
  border: 2px solid #00ffff;
  color: #00ffff;
  font-size: 2rem;
  font-weight: bold;
}

button:hover {
  background-color: #00ffff;
  color: #000000;
}

#topBtns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 10px;
}

#bottomBtns {
  display: grid;
  grid-template: repeat(4, 1fr) / repeat(4, 1fr);
  gap: 10px;
}

footer {
  font-size: 2vh;
}

